// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDialog already following card 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
              <div
                class="CardDependencies__picker css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-9-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class="CardDependencies__picker__control css-13cymwt-control"
                >
                  <div
                    class="CardDependencies__picker__value-container css-1fdsijx-ValueContainer"
                  >
                    <div
                      class="CardDependencies__picker__placeholder css-1jqq78o-placeholder"
                      id="react-select-9-placeholder"
                    >
                      + Add
                    </div>
                    <div
                      class="CardDependencies__picker__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-9-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="CardDependencies__picker__input"
                        id="react-select-9-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="CardDependencies__picker__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="CardDependencies__picker__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="CardDependencies__picker__indicator CardDependencies__picker__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
              <div
                class="MarkdownEditor octo-editor  "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
          </div>
          <div
            class="CardDetailContentsMenu content add-content"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <span>
                  Add content
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog limited card shows hidden view (no toolbar) 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail  CardDetail--is-limited"
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="CardDetail__limited-wrapper"
          >
            <span
              class="CardDetail__limited-bg"
            >
              <svg
                fill="none"
                height="521"
                viewBox="0 0 468 521"
                width="468"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="144"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="144"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="192"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="209"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="257"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="305"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="199"
                  rx="4"
                  width="468"
                  y="322"
                />
              </svg>
            </span>
            <p
              class="CardDetail__limited-title"
            >
              This card is hidden
            </p>
            <p
              class="CardDetail__limited-body"
            >
              Upgrade to our Professional or Enterprise plan to view archived cards, have unlimited views per boards, unlimited cards and more.
              <br />
              <a
                class="CardDetail__limited-link"
                role="button"
              >
                Learn more about our plans.
              </a>
            </p>
            <button
              type="button"
            >
              <span>
                Upgrade
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return a cardDialog readonly 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          />
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          />
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper override menuOpened"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
              <div
                class="Menu noselect left "
              >
                <div
                  class="menu-contents"
                >
                  <div
                    class="menu-options"
                  >
                    <div>
                      <div
                        aria-label="Delete"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Delete
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        aria-label="Copy link"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-link-variant LinkIcon"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Copy link
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        aria-label="New template from card"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-plus"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            New template from card
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        aria-label="View history"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="menu-option__icon"
                          >
                            <i
                              class="CompassIcon icon-restore"
                            />
                          </div>
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            View history
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="menu-spacer hideOnWidescreen"
                  />
                  <div
                    class="menu-options hideOnWidescreen"
                  >
                    <div
                      aria-label="Cancel"
                      class="MenuOption TextOption menu-option menu-cancel"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Cancel
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
              <div
                class="CardDependencies__picker css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class="CardDependencies__picker__control css-13cymwt-control"
                >
                  <div
                    class="CardDependencies__picker__value-container css-1fdsijx-ValueContainer"
                  >
                    <div
                      class="CardDependencies__picker__placeholder css-1jqq78o-placeholder"
                      id="react-select-4-placeholder"
                    >
                      + Add
                    </div>
                    <div
                      class="CardDependencies__picker__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-4-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="CardDependencies__picker__input"
                        id="react-select-4-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="CardDependencies__picker__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="CardDependencies__picker__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="CardDependencies__picker__indicator CardDependencies__picker__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
              <div
                class="MarkdownEditor octo-editor  "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
          </div>
          <div
            class="CardDetailContentsMenu content add-content"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <span>
                  Add content
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content and cancel delete confirmation do nothing 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
              <div
                class="CardDependencies__picker css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-6-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class="CardDependencies__picker__control css-13cymwt-control"
                >
                  <div
                    class="CardDependencies__picker__value-container css-1fdsijx-ValueContainer"
                  >
                    <div
                      class="CardDependencies__picker__placeholder css-1jqq78o-placeholder"
                      id="react-select-6-placeholder"
                    >
                      + Add
                    </div>
                    <div
                      class="CardDependencies__picker__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-6-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="CardDependencies__picker__input"
                        id="react-select-6-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="CardDependencies__picker__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="CardDependencies__picker__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="CardDependencies__picker__indicator CardDependencies__picker__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
              <div
                class="MarkdownEditor octo-editor  "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
          </div>
          <div
            class="CardDetailContentsMenu content add-content"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <span>
                  Add content
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
              <div
                class="CardDependencies__picker css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class="CardDependencies__picker__control css-13cymwt-control"
                >
                  <div
                    class="CardDependencies__picker__value-container css-1fdsijx-ValueContainer"
                  >
                    <div
                      class="CardDependencies__picker__placeholder css-1jqq78o-placeholder"
                      id="react-select-2-placeholder"
                    >
                      + Add
                    </div>
                    <div
                      class="CardDependencies__picker__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-2-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="CardDependencies__picker__input"
                        id="react-select-2-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="CardDependencies__picker__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="CardDependencies__picker__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="CardDependencies__picker__indicator CardDependencies__picker__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
              <div
                class="MarkdownEditor octo-editor  "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
          </div>
          <div
            class="CardDetailContentsMenu content add-content"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <span>
                  Add content
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot without permissions 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            />
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          />
          <div
            class="CardDependencies"
          >
            <div
              class="CardDependencies__section"
            >
              <div
                class="CardDependencies__label"
              >
                Blocked by
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          />
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="octo-content CardDetailContents"
          >
            <div
              class="octo-block"
            >
              <div
                class="octo-block-margin"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
